// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display blue message for normal message 1`] = `
.c0 {
  position: fixed;
  right: 0;
  top: 0;
}

.c1 {
  background: #2F80ED;
  color: white;
  margin: 0 1em 0;
  padding: 10px;
  font-weight: bold;
  text-align: center;
  box-shadow: 2px 2px 10px rgba(0,0,0,0.25);
  visibility: visible;
  overflow: hidden;
  -webkit-animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
  -webkit-animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
  animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
}

.c1:nth-child(1) {
  margin-top: 1em;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    Thank you
  </p>
</div>
`;

exports[`should display message 1`] = `
.c0 {
  position: fixed;
  right: 0;
  top: 0;
}

<div
  className="c0"
/>
`;

exports[`should display red message for error message 1`] = `
.c0 {
  position: fixed;
  right: 0;
  top: 0;
}

.c1 {
  background: #EB5757;
  color: white;
  margin: 0 1em 0;
  padding: 10px;
  font-weight: bold;
  text-align: center;
  box-shadow: 2px 2px 10px rgba(0,0,0,0.25);
  visibility: visible;
  overflow: hidden;
  -webkit-animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
  -webkit-animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
  animation: bfJSmJ 2s forwards cubic-bezier(0.2,0.8,0.2,1);
}

.c1:nth-child(1) {
  margin-top: 1em;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    Error
  </p>
</div>
`;
